# dischatbot

./: pyproject.toml
dischatbot/: __init__.py  __main__.py  bot.py  constants.py  ui.py  ui_cog.py
dischatbot/models/: chat.py
tests/: test_dischatbot.py
